--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
     ],
     "license": "MIT",
     "require": {
+        "intervention/image": "^2.4",
+        "artem-schander/l5-modular": "^1.4",
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
